# AutoTools.at

./: Makefile.am  Makefile.in  aclocal.m4  autoreconf.usage  configure  configure.ac
src/: hello.c  whine.c
